--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,24 +1,26 @@
-name: Gem Release
+name: release
+
 on:
   push:
     branches:
       - main
-env:
-  GEM_HOST_API_KEY: "${{secrets.RUBYGEMS_AUTH_TOKEN}}"
-jobs:
-  deploy:
-      name: Deploy app
-      runs-on: ubuntu-latest
 
-      steps:
-        - uses: actions/checkout@v3
-        - uses: ruby/setup-ruby@v1
+jobs:
+  release-please:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      # Setup ruby if a release was created
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.0.0
 
-        - run: bundle install
+      # Bundle install
+      - run: bundle install
 
-        - name: publish gem
+      # Publish
+      - name: publish gem
         run: |
           mkdir -p $HOME/.gem
           touch $HOME/.gem/credentials
@@ -26,3 +28,7 @@ jobs:
           printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
           gem build *.gemspec
           gem push *.gem
+        env:
+          # Make sure to update the secret name
+          # if yours isn't named RUBYGEMS_AUTH_TOKEN
+          GEM_HOST_API_KEY: "${{secrets.RUBYGEMS_AUTH_TOKEN}}"
